Add proper html to be read

--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-Test campaign page
+<html lang="en">
+<head>
+	<meta charset="utf-8">
+	<title>Elenrath</title>
+</head>
+
+<body>
+	Test campaign page
+</body>
+</html>
