--- a/index.html
+++ b/index.html
@@ -2,10 +2,16 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>Elenrath</title>
+	<title>Campaign Guide - Elenrath</title>
+
+	<link rel="stylesheet" href="main.css">
 </head>
 
 <body>
-	Test campaign page
+	<h2 class="header">Welcome Adventurers</h2>
+	<div class="content">
+		<p class="text-center">Elenrath is a homebrew world for D&D 5e.</p>
+		<a href="elenrath.html">Explore Elenrath</a>
+	</div>
 </body>
 </html>
