region pages set up

--- a/brailen-gal.html
+++ b/brailen-gal.html
@@ -3,23 +3,22 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Abora - Region</title>
+	<title>Brailen Gal - Region</title>
 
 	<link rel="stylesheet" href="main.css">
 </head>
 
 <body>
-	<h2 class="header">Abora</h2>
+	<h2 class="header">Brailen Gal</h2>
 	<div class="content">
 		<div class="flex-container">
 			<div class="flex-box">
 				<p>
-					What is Abora? Who is Abora? But more importantly why is Abora? Abora is split by The Bellowing Summit mountain range. 
-					Boulderlow isolates itself while Chastenglade and Sleekshire have a peacefire currently negotiated.
+					A once diverse and thriving region now subjected by a rutheless human empire.
 				</p>
 			</div>
 			<div class="flex-box">
-				<a href="imgs/Abora.png"><img src="imgs/Abora.png" class="map-preview"/><div>Click to enlarge</div></a>
+				<a href="imgs/Brailen Gal.png"><img src="imgs/Brailen Gal.png" class="map-preview"/><div>Click to enlarge</div></a>
 			</div>
 		</div>
 
@@ -27,16 +26,15 @@
 			<div class="flex-box">
 				<h3 class="flex-header">Cities</h3>
 				<ul>
-					<li><a href="cities/abora/boulderlow.html">Boulderlow</a></li>
-					<li><a href="cities/abora/chastenglade.html">Chastenglade</a></li>
-					<li><a href="cities/abora/sleekshire.html">Sleekshire</a></li>
+					<li><a href="Abora/boulderlow.html">Shadowhall</a></li>
 				</ul>
 			</div>
 
 			<div class="flex-box">
 				<h3 class="flex-header">Locations</h3>
 				<ul>
-					<li><a href="#">The Bellowing Summit</a></li>
+					<li><a href="#">Troville Tips</a></li>
+					<li><a href="#">Smastein Isles</a></li>
 				</ul>
 			</div>
 		</div>
