--- a/cities/abora/chastenglade.html
+++ b/cities/abora/chastenglade.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Chastenglade - City</title>
 
-	<link rel="stylesheet" href="../main.css">
+	<link rel="stylesheet" href="../../main.css">
 </head>
 
 <body>
@@ -18,10 +18,9 @@
 				</p>
 			</div>
 			<div class="flex-box">
-				<a href="./Sleekshire.png"><img src="./Sleekshire.png" class="map-preview"/><div>Click to enlarge</div></a>
-				<div>Population: 11,647</div>
+				<a href="../../imgs/abora/chastenglade.png"><img src="../../imgs/abora/chastenglade.png" class="map-preview"/><div>Click to enlarge</div></a>
 				<div>
-					Demographics:
+					<h3 class="flex-header">Demographics</h3>
 					<ul>
 						<li>Viashino - 60%</li>
 						<li>Centaurs - 18%</li>
@@ -56,9 +55,9 @@
 			</div>
 		</div>
 
-		<a href="../abora.html">Back to Abora</a>
+		<a href="../../abora.html">Back to Abora</a>
 		<br>
-		<a href="index.html">Back to main page</a>
+		<a href="../../index.html">Back to main page</a>
 	</div>
 </body>
 </html>
