--- a/elenrath.html
+++ b/elenrath.html
@@ -22,31 +22,33 @@
 
 		<div class="flex-container">
 			<div class="flex-box">
-				<h3 class="flex-header">Continents</h3>
+				<h3 class="flex-header">Regions</h3>
 				<ul>
-					<li>
-						<a href="abora.html">Abora</a>
-					</li>
-					<li>
-						<a href="brailen_gal.html">Brailen Gal</a>
-					</li>
-					<li>
-						<a href="esfran.html">Esfran</a>
-					</li>
-					<li>
-						<a href="jatera.html">Jatera</a>
-					</li>
-					<li>
-						<a href="krand.html">Krand</a>
-					</li>
-					<li>
-						<a href="osas.html">Osas</a>
-					</li>
+					<li><a href="abora.html">Abora</a></li>
+					<li><a href="brailen-gal.html">Brailen Gal</a></li>
+					<li><a href="efran.html">Efran</a></li>
+					<li><a href="jatera.html">Jatera</a></li>
+					<li><a href="krand.html">Krand</a></li>
+					<li><a href="osas.html">Osas</a></li>
 				</ul>
 			</div>
 
 			<div class="flex-box">
-				<h3 class="flex-header">Locations</h3>
+				<h3 class="flex-header">Points of Interest</h3>
+				<ul>
+					<li>
+						<a href="cities/mor-gearum.html">Mor Gearum</a>
+					</li>
+				</ul>
+
+				
+				<h3 class="flex-header">History</h3>
+				<ul>
+					<li><a href="#">Pre Chaos</a></li>
+					<li><a href="#">Silence</a></li>
+					<li><a href="#">1st Age</a></li>
+					<li><a href="#">2nd Age</a></li>
+				</ul>
 			</div>
 		</div>
 
