--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Campaign Guide - Elenrath</title>
 
 	<link rel="stylesheet" href="main.css">
@@ -10,8 +11,23 @@
 <body>
 	<h2 class="header">Welcome Adventurers</h2>
 	<div class="content">
-		<p class="text-center">Elenrath is a homebrew world for D&D 5e.</p>
-		<a href="elenrath.html">Explore Elenrath</a>
+		<p class="text-center">This site will serve as an informational guide to the homebrew world, Elenrath, I will be running for D&D 5e.</p>
+		
+		<div class="flex-container">
+			<div class="flex-box">
+				<h3 class="flex-header">Quick links</h3>
+				<ul>
+					<li><a href="elenrath.html">Explore Elenrath</a></li>
+				</ul>
+			</div>
+
+			<div class="flex-box">
+				<h3 class="flex-header">Optional Rules</h3>
+				<ul>
+					<li><a href="#">Flanking</a></li>
+				</ul>
+			</div>
+		</div>
 	</div>
 </body>
 </html>
