--- a/krand.html
+++ b/krand.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>Jatera - Region</title>
+	<title>Krand - Region</title>
 
 	<link rel="stylesheet" href="main.css">
 </head>
@@ -13,10 +13,13 @@
 	<div class="content">
 		<div class="flex-container">
 			<div class="flex-box">
-				<p>Description about Jatera</p>
+				<p>
+					A dangerous land where only those with strength or stupidity test their might. 
+					Giant scaled and feathered beast roam these lands and those wanting to prove themselves hunt them down.
+				</p>
 			</div>
 			<div class="flex-box">
-				<a href="imgs/Jatera.png"><img src="imgs/Jatera.png" class="map-preview"/><div>Click to enlarge</div></a>
+				<a href="imgs/Krand.png"><img src="imgs/Krand.png" class="map-preview"/><div>Click to enlarge</div></a>
 			</div>
 		</div>
 
@@ -24,23 +27,15 @@
 			<div class="flex-box">
 				<h3 class="flex-header">Cities</h3>
 				<ul>
-					<li><a href="#">Eastwood</a></li>
-					<li><a href="#">Fallcrest</a></li>
-					<li><a href="#">Hammerfell</a></li>
-					<li><a href="#">Port Boar</a></li>
-					<li><a href="#">Randor</a></li>
-					<li><a href="#">Stonebrook</a></li>
-					<li><a href="#">Westport</a></li>
+					<li><a href="#">Nightford</a></li>
+					<li><a href="#">Flowermeadow</a></li>
 				</ul>
 			</div>
 
 			<div class="flex-box">
 				<h3 class="flex-header">Locations</h3>
 				<ul>
-					<li><a href="#">Isle of Wails</a></li>
-					<li><a href="#">Silkwoods</a></li>
-					<li><a href="#">The Wild Forest</a></li>
-					<li><a href="#">The Windy Peaks</a></li>
+					<li><a href="#">Mirage Tower</a></li>
 				</ul>
 			</div>
 		</div>
