--- a/osas.html
+++ b/osas.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>Osas - Continent</title>
+	<title>Osas - Region</title>
 
 	<link rel="stylesheet" href="main.css">
 </head>
@@ -13,7 +13,7 @@
 	<div class="content">
 		<div class="flex-container">
 			<div class="flex-box">
-				<p>Description about Osas</p>
+				<p>While the cities keep peace with eachother the surrounding lands are ripe with monsters and bandits.</p>
 			</div>
 			<div class="flex-box">
 				<a href="imgs/Osas.png"><img src="imgs/Osas.png" class="map-preview"/><div>Click to enlarge</div></a>
@@ -24,23 +24,20 @@
 			<div class="flex-box">
 				<h3 class="flex-header">Cities</h3>
 				<ul>
-					<li><a href="#">Eastwood</a></li>
-					<li><a href="#">Fallcrest</a></li>
-					<li><a href="#">Hammerfell</a></li>
-					<li><a href="#">Port Boar</a></li>
-					<li><a href="#">Randor</a></li>
-					<li><a href="#">Stonebrook</a></li>
-					<li><a href="#">Westport</a></li>
+					<li><a href="#">The Emerald Keep</a></li>
+					<li><a href="#">New Dale</a></li>
+					<li><a href="#">Lorbridge</a></li>
+					<li><a href="#">Vertbrook</a></li>
+					<li><a href="#">Marblefield</a></li>
+					<li><a href="#">The Endless Citadel</a></li>
+					<li><a href="#">Silverbank</a></li>
 				</ul>
 			</div>
 
 			<div class="flex-box">
 				<h3 class="flex-header">Locations</h3>
 				<ul>
-					<li><a href="#">Isle of Wails</a></li>
-					<li><a href="#">Silkwoods</a></li>
-					<li><a href="#">The Wild Forest</a></li>
-					<li><a href="#">The Windy Peaks</a></li>
+					<li><a href="#">Malto</a></li>
 				</ul>
 			</div>
 		</div>
