--- a/cities/abora/sleekshire.html
+++ b/cities/abora/sleekshire.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Sleekshire - City</title>
 
-	<link rel="stylesheet" href="../main.css">
+	<link rel="stylesheet" href="../../main.css">
 </head>
 
 <body>
@@ -18,7 +18,12 @@
 				</p>
 			</div>
 			<div class="flex-box">
-				<a href="./Sleekshire.png"><img src="./Sleekshire.png" class="map-preview"/><div>Click to enlarge</div></a>
+				<a href="../../imgs/abora/sleekshire.png"><img src="../../imgs/abora/sleekshire.png" class="map-preview"/><div>Click to enlarge</div></a>
+				<div>
+					<h3 class="flex-header">Demographics</h3>
+					<ul>
+					</ul>
+				</div>
 			</div>
 		</div>
 
@@ -44,9 +49,9 @@
 			</div>
 		</div>
 
-		<a href="../abora.html">Back to Abora</a>
+		<a href="../../abora.html">Back to Abora</a>
 		<br>
-		<a href="index.html">Back to main page</a>
+		<a href="../../index.html">Back to main page</a>
 	</div>
 </body>
 </html>
